<resources>
    <string name="app_name">Property Becho N Kharido</string>
    <string name="a_k_p">AIzaSyDDaW_rQKqJtwEdqnib_-WQLCeSodUnb5g</string>
    <string name="password_sign_up">Sign up</string>
    <string name="password_sign_in">Sign in</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="facebook_sign_in">Sign In with Facebook</string>
    <string name="main_add">Add Listing</string>
    <string name="main_change_currency">Change Currency</string>
    <string name="main_edit">Edit a Listing</string>
    <string name="main_search">Search</string>
    <string name="main_loan_simulator">Loan Simulator</string>
    <string name="lorem_ipsum">Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>
    <string name="access_internal_storage_not_granted">Access to Internal Storage Not Granted</string>
    <string name="there_was_an_error">There was an ERROR</string>
    <string name="no_image_was_picked">No image was picked</string>
    <string name="some_access_not_granted">Some access not granted</string>
    <string name="noInternet">Internet NOT available</string>
    <string name="snackbarNoInternetButton">HIDE</string>
    <string name="notif_notification_channel_name">notification_channel</string>
    <string name="loading_please_wait">Loading... please wait...</string>
    <string name="notification_title_create">Listing created successfully</string>
    <string name="notification_title_edit">Listing edited successfully</string>
    <string name="notification_text">Address: %1$s</string>
    <string name="main_current_location">Current Location</string>
    <string name="cant_make_map_requests">You can\'t make map request with these Google Services</string>
    <string name="change_currency">Change Currency</string>
    <string name="go_back">Go back</string>
    <string name="information_not_available">Information not Available</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="no_description_available">No description available</string>
    <string name="modify_loan">Modify Loan</string>
    <string name="show_list">Show List</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string-array name="City_array">
        <item>Select City</item>
        <item>Faridabad</item>
        <item>Delhi</item>
        <item>Gurugoan</item>
        <item>Noida</item>
    </string-array>
    <string-array name="items_div_class_1">
        <item>Div 1-A</item>
        <item>Div 1-B</item>
        <item>Div 1-C</item>
        <item>Div 1-D</item>
    </string-array>
    <string-array name="items_div_class_2">
        <item>Div 2-A</item>
        <item>Div 2-B</item>
        <item>Div 2-C</item>
        <item>Div 2-D</item>
    </string-array>
    <string-array name="items_div_class_3">
        <item>Div 3-A</item>
        <item>Div 3-B</item>
        <item>Div 3-C</item>
        <item>Div 3-D</item>
    </string-array>
    <string-array name="items_div_class_4">
        <item>Div 4-A</item>
        <item>Div 4-B</item>
        <item>Div 4-C</item>
        <item>Div 4-D</item>
    </string-array>
    <string-array name="budget_min">
        <item>₹ Min</item>
        <item>₹ 5 Lac</item>
        <item>₹ 10 Lac</item>
        <item>₹ 20 Lac</item>
        <item>₹ 30 Lac</item>
        <item>₹ 40 Lac</item>
        <item>₹ 50 Lac</item>
        <item>₹ 60 Lac</item>
        <item>₹ 70 Lac</item>
        <item>₹ 80 Lac</item>
        <item>₹ 90 Lac</item>
        <item>₹ 1 Cr</item>
        <item>₹ 1.2 Cr</item>
        <item>₹ 1.4 Cr</item>
        <item>₹ 1.6 Cr</item>
        <item>₹ 1.8 Cr</item>
        <item>₹ 2 Cr</item>
        <item>₹ 2.3 Cr</item>
        <item>₹ 2.6 Cr</item>
        <item>₹ 3 Cr</item>
        <item>₹ 3.5 Cr</item>
        <item>₹ 4 Cr</item>
        <item>₹ 4.5 Cr</item>
        <item>₹ 5 Cr</item>
        <item>₹ 10 Cr</item>
        <item>₹ 15 Cr</item>
    </string-array>
    <string-array name="budget_min_rent">
        <item>₹ Min</item>
        <item>₹ 0</item>
        <item>₹ 5000</item>
        <item>₹ 10000</item>
        <item>₹ 15000</item>
        <item>₹ 20000</item>
        <item>₹ 25000</item>
        <item>₹ 30000</item>
        <item>₹ 35000</item>
        <item>₹ 40000</item>
        <item>₹ 50000</item>
        <item>₹ 60000</item>
        <item>₹ 70000</item>
        <item>₹ 800000</item>
        <item>₹ 1 Lac  </item>
        <item>₹ 1.5 Lac</item>
        <item>₹ 2 Lac  </item>
        <item>₹ 4 Lac</item>
        <item>₹ 7 Lac  </item>
        <item>₹ 10 Lac</item>

    </string-array>
    <string-array name="budget_max_rent">
        <item>₹ Max</item>
        <item>₹ 5000</item>
        <item>₹ 10000</item>
        <item>₹ 15000</item>
        <item>₹ 20000</item>
        <item>₹ 25000</item>
        <item>₹ 30000</item>
        <item>₹ 35000</item>
        <item>₹ 40000</item>
        <item>₹ 50000</item>
        <item>₹ 60000</item>
        <item>₹ 70000</item>
        <item>₹ 800000</item>
        <item>₹ 1 Lac  </item>
        <item>₹ 1.5 Lac</item>
        <item>₹ 2 Lac  </item>
        <item>₹ 4 Lac</item>
        <item>₹ 7 Lac  </item>
        <item>₹ 10 Lac</item>
    </string-array>
    <string-array name="budget_max">
        <item>₹ Max</item>
        <item>₹ 10 Lac</item>
        <item>₹ 20 Lac</item>
        <item>₹ 30 Lac</item>
        <item>₹ 40 Lac</item>
        <item>₹ 50 Lac</item>
        <item>₹ 60 Lac</item>
        <item>₹ 70 Lac</item>
        <item>₹ 80 Lac</item>
        <item>₹ 90 Lac</item>
        <item>₹ 1 Cr</item>
        <item>₹ 1.2 Cr</item>
        <item>₹ 1.4 Cr</item>
        <item>₹ 1.6 Cr</item>
        <item>₹ 1.8 Cr</item>
        <item>₹ 2 Cr</item>
        <item>₹ 2.3 Cr</item>
        <item>₹ 2.6 Cr</item>
        <item>₹ 3 Cr</item>
        <item>₹ 3.5 Cr</item>
        <item>₹ 4 Cr</item>
        <item>₹ 4.5 Cr</item>
        <item>₹ 5 Cr</item>
        <item>₹ 10 Cr</item>
        <item>₹ 15 Cr</item>
    </string-array>
    <string-array name="area_parameter">
        <item>Sqft</item>
        <item>Sqyrd</item>
        <item> Sqm         </item>
        <item> Acre         </item>
        <item> Bigha         </item>
        <item>  Hectare        </item>
        <item>   Marla       </item>
        <item>   Kanal       </item>
        <item> Biswa1         </item>
        <item>  Biswa2        </item>
        <item> Ground         </item>
        <item>  Aankadam        </item>
        <item>   Rood       </item>
        <item>  Chatak        </item>
        <item> Kottah         </item>
        <item> Cent         </item>
        <item> Perch         </item>
        <item> Guntha         </item>
        <item>   Are       </item>
    </string-array>
    <string-array name="area_min">
        <item>  Min   </item>
        <item>   100  </item>
        <item>  200   </item>
        <item>  300   </item>
        <item>  400   </item>
        <item>  1000   </item>
        <item>  1500   </item>
        <item>  2000   </item>
        <item>  3000   </item>
        <item>  4000    </item>
        <item>  5000   </item>
        <item>  10000  </item>
        <item>  25000  </item>
        <item>   50000 </item>
        <item>   50000+ </item>
    </string-array>
    <string-array name="area_max">
        <item>  Max            </item>
        <item>   100           </item>
        <item>  200            </item>
        <item>  300            </item>
        <item>  400            </item>
        <item>  1000            </item>
        <item>  1500            </item>
        <item>  2000            </item>
        <item>  3000        </item>
        <item>   4000    </item>
        <item>  5000            </item>
        <item>  10000            </item>
        <item>  25000            </item>
        <item>   50000           </item>
        <item>   50000+           </item>
    </string-array>
    <string-array name="openSides">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="lockperiod">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="ageofConstruction">
        <item>Select</item>
        <item>New Construction</item>
        <item>Less than 5 years</item>
        <item>5 to 10 years</item>
        <item>10 to 15 years</item>
        <item>15 to 20 years</item>
        <item>Above 20 years</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="default_notification_channel_id">admin_channel</string>
    <string name="btn_send_token">Send Token</string>
    <string name="btn_send_tokens">Send Tokens</string>
    <string name="btn_send_topic">Send Topic</string>
    <string name="btn_show_token">Show Token</string>
    <string name="btn_subscribe_news">Subscribe (News)</string>
    <string name="btn_unsubscribe_news">Unsubscribe (News)</string>
    <string name="result">Something will happen here&#8230;</string>
</resources>