<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".AdminPushNotifi">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/zoneCenter"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/zoneCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showToken"
            android:text="@string/btn_show_token"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <Button
                style="@style/CustomButton"
                android:text="@string/btn_subscribe_news"
                android:onClick="subscribe"/>

            <Button
                style="@style/CustomButton"
                android:text="@string/btn_unsubscribe_news"
                android:onClick="unsubscribe"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/CustomButton"
                android:text="@string/btn_send_token"
                android:onClick="sendToken"/>

            <Button
                style="@style/CustomButton"
                android:text="@string/btn_send_tokens"
                android:onClick="sendTokens"/>

            <Button
                style="@style/CustomButton"
                android:text="@string/btn_send_topic"
                android:onClick="sendTopic"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/zoneCenter"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:gravity="center"
        android:text="@string/result"/>



</RelativeLayout>